daemon/macros/tests/ui/with_generics.rs
use ozmux_macros::NewType;

#[derive(NewType)]
struct Generic<T>(T);

fn main() {}
